--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,9 +17,9 @@ services:
     build:
       context: .
       dockerfile: ./frontend/Dockerfile
-    command: npm start
+    command: nginx -g "daemon off;"
     ports:
-      - "3000:3000"
+      - "80:80"
     depends_on:
       - backend
     environment:
